--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,5 +46,5 @@ jobs:
       - name: Merge devel to main
         run: |
           git checkout main
-          git merge devel
+          git merge origin/devel
           git push origin main
