--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,24 +27,24 @@ jobs:
       - name: Run tests
         run: bundle exec rspec
 
-  deploy:
-    needs: test
-    runs-on: ubuntu-latest
-    if: success()
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  # deploy:
+  #   needs: test
+  #   runs-on: ubuntu-latest
+  #   if: success()
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Configure Git
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+  #     - name: Configure Git
+  #       run: |
+  #         git config --global user.name 'github-actions[bot]'
+  #         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
 
-      - name: Fetch all branches
-        run: git fetch --all
+  #     - name: Fetch all branches
+  #       run: git fetch --all
 
-      - name: Merge devel to main
-        run: |
-          git checkout main
-          git merge origin/devel --allow-unrelated-histories
-          git push origin main
+  #     - name: Merge devel to main
+  #       run: |
+  #         git checkout main
+  #         git merge origin/devel --allow-unrelated-histories
+  #         git push origin main
